# Sales-Data-Pipeline

./: .gitignore  NBA-Data-Backfill.py  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  temp.py
config/: airflow.cfg
dags/: bronze_models.py  gold_models.py  nba_aws_to_s3.py  nba_aws_to_snowflake.py  nba_dimensions_weekly.py  nba_facts_daily.py  silver_models.py  snapshots.py
data/: box_scores_20260321.json  games_20260321.json  player_details.json  standings_20260321.json  team_details.json  teams.json
nba_pipeline/: .user.yml  dbt_project.yml
nba_pipeline/analyses/: gold_analysis.sql  silver_analysis.sql
nba_pipeline/models/bronze/: bronze.yml  bronze_box_scores.sql  bronze_games.sql  bronze_player_details.sql  bronze_standings.sql  bronze_team_details.sql  bronze_teams.sql
nba_pipeline/models/gold/: gold.yml  mart_player_analytics.sql  mart_team_analytics.sql
nba_pipeline/models/silver/: dim_players.sql  dim_teams.sql  fact_player_performances.sql  fact_team_games.sql  silver.yml  silver_box_scores.sql  silver_games.sql  silver_player_details.sql  silver_standings.sql  silver_team_details.sql  silver_teams.sql
nba_pipeline/models/sources/: sources.yml
nba_pipeline/seeds/: nba_conference_mapping.csv
nba_pipeline/snapshots/: player_details_snapshot.sql  snapshots.yml  standings_snapshot.sql  team_details_snapshot.sql
nba_pipeline/tests/: assert_team_stats_total_match.sql
